added some styling first for testing in the home page

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,7 @@
-<h1>This is Home</h1>
-<p>Welcome to the home page</p>
+<div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/background.png);">
+  <div class="container">
+    <h1>Mamoushou brings <strong>High valued products</strong> to <strong>The Market</strong>!</h1>
+    <p>Explore our wide range of import and export products to enhance your business operations and reach new markets.</p>
+    <div class="btn1"><a class="btn btn-flat" href="#">Shop Now</a></div>
+  </div>
+</div>
