--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,42 +13,70 @@
  *= require_tree .
  *= require_self
  */
+
+ .container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  height: 100vh;
+  background: #f5f5f5;
+
+}
  .banner {
   background-size: cover;
   background-position: center;
-  padding: 150px 0;
+  background-repeat: no-repeat;
+  border-radius: 15px;
+  display: inline-block;
+  aspect-ratio: auto;
+  padding: 100px 50px;
 }
 
 .banner h1 {
   margin: 0;
-  color: rgb(199, 7, 7);
+  color: rgb(255, 255, 255);
   text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
   font-size: 32px;
   font-weight: bold;
+  text-align: left;
+  padding-left: 20px;
+  margin-bottom: 20px;
+}
+
+.banner h2 {
+  margin: 0;
+  color: rgb(255, 255, 255);
+  text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
+  font-size: 32px;
+  font-weight: bold;
+  text-align: left;
+  padding-left: 20px;
 }
 
 .banner p {
   font-size: 20px;
-  color: rgb(197, 197, 239);
+  color: rgb(255, 255, 255);
   opacity: .7;
   text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
+  padding-left: 20px;
 }
 
 .btn1 {
-display: flex;
-justify-content: center;
+ display: flex;
+ text-align: center;
+ padding: 10px 20px;
 }
 
 .btn {
   display: inline-block;
   padding: 10px 20px;
-  background: #333;
-  color: rgb(241, 12, 12);
+  background: #510c0c;
+  color: rgb(255, 255, 255);
   text-decoration: none;
-  border-radius: 5px;
+  border-radius: 10px;
   margin-top: 20px;
 }
 
 .btn:hover {
-  background: #555;
+  background: #100e0eea;
 }
