--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,7 +1,10 @@
-<div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/background.png);">
+
   <div class="container">
-    <h1>Mamoushou brings <strong>High valued products</strong> to <strong>The Market</strong>!</h1>
-    <p>Explore our wide range of import and export products to enhance your business operations and reach new markets.</p>
+    <div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://img.freepik.com/free-photo/organic-nuts-snack-bowls-spoons_23-2148675536.jpg?t=st=1731870974~exp=1731874574~hmac=b93458a6aaf0f4a23355ea078feec616fd1b26f8e54c48c68f121dd82acd7eb7&w=1800);">
+    <h1>Mamouchou Company</h1>
+    <h2>brings <strong>High valued products</strong> to <strong>The Market</strong>!</h2>
+    <p>Explore our wide range of import and export </p>
+    <p>products to enhance your business operations and reach new markets</p>
     <div class="btn1"><a class="btn btn-flat" href="#">Shop Now</a></div>
   </div>
 </div>
