--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -7,4 +7,21 @@
     <p>products to enhance your business operations and reach new markets</p>
     <div class="btn1"><a class="btn btn-flat" href="#">Shop Now</a></div>
   </div>
+  <div class="cards">
+    <div class="card">
+      <img src="https://img.freepik.com/free-photo/organic-nuts-snack-bowls-spoons_23-2148675536.jpg?t=st=1731870974~exp=1731874574~hmac=b93458a6aaf0f4a23355ea078feec616fd1b26f8e54c48c68f121dd82acd7eb7&w=1800" alt="nuts">
+      <h3>Nuts</h3>
+      <p>High quality nuts from all over the world</p>
+    </div>
+    <div class="card">
+      <img src="https://img.freepik.com/free-photo/organic-nuts-snack-bowls-spoons_23-2148675536.jpg?t=st=1731870974~exp=1731874574~hmac=b93458a6aaf0f4a23355ea078feec616fd1b26f8e54c48c68f121dd82acd7eb7&w=1800" alt="nuts">
+      <h3>Nuts</h3>
+      <p>High quality nuts from all over the world</p>
+    </div>
+    <div class="card">
+      <img src="https://img.freepik.com/free-photo/organic-nuts-snack-bowls-spoons_23-2148675536.jpg?t=st=1731870974~exp=1731874574~hmac=b93458a6aaf0f4a23355ea078feec616fd1b26f8e54c48c68f121dd82acd7eb7&w=1800" alt="nuts">
+      <h3>Nuts</h3>
+      <p>High quality nuts from all over the world</p>
+    </div>
+  </div>
 </div>
